Swagger Documentation update
